Fix nav spacing to be consistent across Chrome and Firefox

--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ header {
 }
 main {
   max-width: $max-width;
-  margin: 2.5% auto;
+  margin: auto auto;
   flex: 1;
   .banner {
     max-width: 100%;
